libs/wingc/src/jsify/snapshots/fails_lift_with_inflight_arguments.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
Expected type to be "IConstruct", but got "inflight (): void" instead 0:0
Cannot reference an inflight value from within a preflight expression 5:11
