libs/wingc/src/jsify/snapshots/fails_when_inflight_class_tries_to_extend_preflight_class.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
Class "Derived" is an inflight class and cannot extend preflight class "Base" 2:35
