libs/wingc/src/jsify/snapshots/fails_when_preflight_class_tries_to_extend_inflight_class.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
Class "Derived" is an preflight class and cannot extend inflight class "Base" 2:26
