libs/wingc/src/jsify/snapshots/fails_when_reassigning_preflight_variable.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
Variable cannot be reassigned from inflight 3:6
Expected type to be "IConstruct", but got "inflight (): void" instead 0:0
