libs/wingc/src/jsify/snapshots/fails_when_referencing_this_from_static.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
"this" can only be used in an instance method or constructor 3:8
